# astra

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  ui.rs
crates/app/src/app/: config.rs  event_loop.rs  mod.rs  preferences.rs  resume.rs  run.rs  shell.rs  state.rs  window_events.rs
crates/app/src/app/keyboard/: handler.rs  maps.rs  mod.rs  text_edit.rs
crates/app/src/app/mouse/: button.rs  cursor.rs  gestures.rs  mod.rs
crates/app/src/app/platform/: mod.rs  native.rs
crates/app/src/app/platform/wasm/: init.rs  mod.rs  ops.rs
crates/app/src/app/presentation/: egui_pass.rs  gpu.rs  mod.rs  pending.rs  png_export.rs  redraw.rs  scene.rs  tick.rs
crates/app/src/app/tests/: config.rs
crates/app/src/app/ui_actions/: align.rs  dispatch.rs  document.rs  files.rs  mod.rs  ordering.rs  style.rs  view.rs
crates/canvas/: Cargo.toml
crates/canvas/benches/: canvas_bench.rs
crates/canvas/src/: elbow.rs  lib.rs  platform.rs  spatial_index.rs
crates/canvas/src/camera/: mod.rs  state.rs  tests.rs
crates/canvas/src/canvas/: clipboard.rs  edit.rs  mod.rs  selection_ops.rs  state.rs
crates/canvas/src/canvas/document/: mod.rs
crates/canvas/src/canvas/document/core/: json_ops.rs  mod.rs  shape_layer_ops.rs  shape_mut.rs  snapshot.rs  spatial_ops.rs  types.rs  undo_ops.rs
crates/canvas/src/canvas/document/export/: color.rs  elements.rs  grouping.rs  mod.rs  parser.rs  points.rs  shape_style.rs
crates/canvas/src/canvas/tests/: canvas.rs  mod.rs  state.rs
crates/canvas/src/event_handler/: handler.rs  mod.rs  press.rs  press_editing.rs  press_misc.rs  press_select_tool.rs  press_text_tool.rs  snap_helpers.rs  state.rs  text_edit.rs
crates/canvas/src/event_handler/drag/: handle.rs  manipulation.rs  mod.rs  multi_move.rs  snap_corner.rs  snap_line_endpoint.rs
crates/canvas/src/event_handler/release/: arrow_finalize.rs  handle.rs  manipulation.rs  mod.rs  multi_move.rs  selection_rect.rs  tools.rs
crates/canvas/src/event_handler/tests/: interaction.rs
crates/canvas/src/input/: constants.rs  lifecycle.rs  mod.rs  state.rs  touch.rs  touch_state.rs  window.rs
crates/canvas/src/interaction/: handles.rs  manager.rs  mod.rs  shape_handles.rs  state.rs
crates/canvas/src/selection/: handles.rs  mod.rs  state.rs  types.rs
crates/canvas/src/selection/manipulation/: mod.rs
crates/canvas/src/selection/manipulation/resize/: bounds.rs  complex.rs  mod.rs  shapes.rs
crates/canvas/src/selection/manipulation/transform/: apply.rs  (+3 more)
crates/canvas/src/shapes/: diamond.rs  ellipse.rs  math.rs  mod.rs  rectangle.rs  shape.rs  shape_geometry.rs  shape_transform.rs
crates/canvas/src/shapes/arrow/: binding.rs  mod.rs  shape.rs  shape_trait.rs  tests.rs
crates/canvas/src/shapes/freehand/: data.rs  impl.rs  mod.rs  simplify.rs  tests.rs
crates/canvas/src/shapes/group/: methods.rs  mod.rs  tests.rs  types.rs
crates/canvas/src/shapes/image/: core.rs  format.rs  mod.rs  shape_impl.rs  tests.rs
crates/canvas/src/shapes/line/: impl_line.rs  mod.rs  shape_trait.rs  tests.rs  types.rs
crates/canvas/src/shapes/text/: font_family.rs  font_weight.rs  impl.rs  mod.rs  model.rs
crates/canvas/src/snap/: angle.rs  constants.rs  grid.rs  mod.rs  tests.rs  types.rs
crates/canvas/src/snap/smart_guides/: mod.rs  ray.rs
crates/canvas/src/tools/: mod.rs  types.rs
crates/canvas/src/tools/manager/: create.rs  default_impl.rs  lifecycle.rs  mod.rs  tests.rs  tool_manager.rs
crates/canvas/tests/: canvas_tests.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  geometry.rs  lib.rs  png.rs  preferences.rs  shape.rs  style.rs
crates/core/tests/: core_tests.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  rex_backend.rs
crates/render/src/png/: gpu.rs  mod.rs  native.rs  wasm.rs
crates/render/src/renderer/: mod.rs  pipeline.rs
crates/render/src/renderer/tests/: render.rs
crates/render/src/text_editor/: keys.rs  mod.rs  platform.rs
crates/render/src/text_editor/state/: core.rs  keyboard.rs  mod.rs  mouse.rs
crates/render/src/vello_impl/: cache.rs  effects.rs  mod.rs  vello_renderer.rs
crates/render/src/vello_impl/fonts/: mod.rs  registry.rs
crates/render/src/vello_impl/grid/: background.rs  build_scene.rs  handles.rs  mod.rs  overlays.rs
crates/render/src/vello_impl/shapes/: basic.rs  dispatch.rs  freehand.rs  image.rs  mod.rs
crates/render/src/vello_impl/tests/: mod.rs  vello_renderer.rs
crates/render/src/vello_impl/text/: layout.rs  mixed_segments.rs  mod.rs  render_math.rs  render_text.rs  render_text_cache_key.rs  render_text_cached.rs  render_text_editing.rs  render_text_mixed.rs  render_text_mixed_plain_seg.rs
crates/render/tests/: render_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  pending.rs  preferences.rs
crates/storage/src/autosave/: factory.rs  manager.rs  mod.rs  tests.rs
crates/storage/src/platform/: mod.rs
crates/storage/src/platform/native/: mod.rs  preferences.rs
crates/storage/src/platform/wasm/: indexeddb.rs
crates/storage/tests/: storage_tests.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  query_string.rs  url.rs
crates/web/src/platform/wasm/: mod.rs  params.rs
crates/web/tests/: web_tests.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: common.rs  icons.rs  layout.rs  lib.rs  menu.rs  sizing.rs  theme.rs
crates/widgets/src/buttons/: icon.rs  mod.rs  multi.rs  toggle_text.rs
crates/widgets/src/colors/: mod.rs  palette.rs
crates/widgets/src/colors/color_data/: mod.rs  types.rs
crates/widgets/src/colors/widgets/: mod.rs  wheel.rs
crates/widgets/src/ui/: actions.rs  color_helpers.rs  mod.rs  presence.rs  render.rs  selected_props.rs  state.rs  toolbar.rs
crates/widgets/src/ui/bottom_toolbar/: grid_style.rs  mod.rs  options.rs  render.rs  zoom.rs
crates/widgets/src/ui/file_menu/: hamburger.rs  menu.rs  mod.rs
crates/widgets/src/ui/platform/: mod.rs  native.rs  wasm.rs
crates/widgets/src/ui/properties/: mod.rs  panel.rs  shape_sections.rs  style_sections.rs
crates/widgets/tests/: widgets_tests.rs
(+63 files in other folders)
