[package]
name = "astra-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Astra application shell for native and WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "astra"
path = "src/main.rs"

[features]
default = ["native"]
native = ["dep:pollster", "dep:env_logger", "dep:arboard"]

[dependencies]
astra-core = { path = "../core", version = "0.1.0" }
astra-canvas = { path = "../canvas", version = "0.1.0" }
astra-storage = { path = "../storage", version = "0.1.0" }
astra-render = { path = "../render", version = "0.1.0" }
astra-widgets = { path = "../widgets", version = "0.1.0" }

kurbo.workspace = true
peniko.workspace = true
winit.workspace = true
vello.workspace = true
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui_extras.workspace = true

pollster = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { workspace = true, optional = true }
egui-winit = { workspace = true, features = [
    "clipboard",
    "links",
    "x11",
    "wayland",
] }
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
astra-web = { path = "../web", version = "0.1.0" }
egui-winit = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
web-time.workspace = true
web-sys = { workspace = true, features = [
    "Window", "Document", "Element", "HtmlCanvasElement",
    "HtmlElement", "CssStyleDeclaration",
] }
