[package]
name = "astra-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Storage abstractions and implementations for astra"

[dependencies]
astra-canvas = { path = "../canvas", version = "0.1.0" }
astra-core = { path = "../core", version = "0.1.0" }
kurbo = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { workspace = true }
dirs = "5"
rfd = { workspace = true }
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    "Window",
    "Storage",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomStringList",
    "Event",
    "EventTarget",
] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
rexie = "0.6"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
pollster.workspace = true
tempfile.workspace = true
