[package]
name = "astra-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WebAssembly platform integrations for astra (clipboard, storage, download/upload)"

[lib]
crate-type = ["rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
astra-canvas = { path = "../canvas", version = "0.1.0" }
astra-core = { path = "../core", version = "0.1.0" }
astra-storage = { path = "../storage", version = "0.1.0" }
astra-render = { path = "../render", version = "0.1.0" }
png.workspace = true
kurbo.workspace = true
vello.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
getrandom = { version = "0.2", features = ["js"] }
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "Window", "Location", "Navigator", "Clipboard", "ClipboardItem",
    "Blob", "BlobPropertyBag", "Url",
    "HtmlInputElement", "HtmlAnchorElement", "HtmlImageElement",
    "FileList", "File", "FileReader",
    "DragEvent", "DataTransfer", "Element", "HtmlElement", "HtmlCanvasElement",
    "EventTarget", "Event",
    "CssStyleDeclaration", "Document", "HtmlBodyElement",
] }
